update[add] : index

--- a/index.html
+++ b/index.html
@@ -57,28 +57,36 @@
                         <p>burger<br></p>
                     </a></li>
                 <li><a href="#" title="more"><img src="./img/menu_chicken01.jpg" alt="menu_chicken">
-                    <p>chicken</p></a>
+                        <p>chicken</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_topdog01.jpg" alt="topdog">
-                    <p>topdog</p></a>
+                        <p>topdog</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_fries01.jpg" alt="fries">
-                    <p>fries</p></a>
+                        <p>fries</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_custard01.jpg" alt="custard">
-                    <p>custard</p></a>
+                        <p>custard</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_concretes01.jpg" alt="concretes">
-                    <p>concretes</p></a>
+                        <p>concretes</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_drinks01.jpg" alt="drinks">
-                    <p>drinks</p></a>
+                        <p>drinks</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_beer01.jpg" alt="beer">
-                    <p>beer</p></a>
+                        <p>beer</p>
+                    </a>
                 </li>
                 <li><a href="#" title="more"><img src="./img/menu_woof01.jpg" alt="woof">
-                    <p>woof</p></a>
+                        <p>woof</p>
+                    </a>
                 </li>
             </ul>
         </article>
@@ -88,95 +96,167 @@
                 <!-- <h2>brand story</h2> -->
                 <h3>Stand For Something Good</h3>
 
-                    <p>세상에 필요한 사려 깊은 가치<br><br>
-                    
+                <p>세상에 필요한 사려 깊은 가치<br><br>
+
                     쉐이크쉑은 신선하고 좋은 재료의 음식과 즐겁고 활기 넘치는<br>
                     지역사회의 모임 공간, 그리고 게스트를 향한 따뜻한 호스피탈리티를 통해<br>
                     우리의 핵심 가치인 “Stand For Something Good”을 실천합니다.</p>
             </div>
         </article>
 
-        <article class="store">
+        <article class="store" id="store_img_wrap">
             <h2>store</h2>
+            <p class="location">location</p>
             <ul class="store_wrap">
-                <li><img src="./img/store_cheongdam01.jpg" alt="store_cheongdam"></li>
-                <li><img src="./img/store_doota01.jpg" alt="store_doota"></li>
-                <li><img src="./img/store_gangnam01.jpg" alt="store_gangnam"></li>
-                <li><img src="./img/store_incheon01.jpg" alt="store_incheon"></li>
-                <li><img src="./img/store_jonggak01.jpg" alt="store_jonggak"></li>
-                <li><img src="./img/store_starfield01.jpg" alt="store_starfield"></li>
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_cheongdam01.jpg"
+                                alt="store_cheongdam"></a>
+                        <div class="caption">
+                            <p class="store_tit">청담<span></span></p>
+                            <p class="store_address">매장주소<span class="sub_address">서울시 강남구 도산대로 327
+                                    SGF청담타워 1층</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_doota01.jpg" alt="store_doota"></a>
+                        <div class="caption">
+                            <p class="store_tit">두타</p>
+                            <p class="store_address">매장주소<span class="sub_address">서울시 중구 장충단로 275
+                                    두타몰 1층 001호</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_gangnam01.jpg"
+                                alt="store_gangnam"></a>
+                        <div class="caption">
+                            <p class="store_tit">강남<span></span></p>
+                            <p class="store_address">매장주소<span class="sub_address">서울시 강남구 강남대로 452
+                                    대연빌딩 1층</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_incheon01.jpg"
+                                alt="store_incheon"></a>
+                        <div class="caption">
+                            <p class="store_tit">인천공항</p>
+                            <p class="store_address">매장주소<span class="sub_address">
+                                    인천공항 제2여객터미널 지하1층
+                                    22-202호</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_jonggak01.jpg"
+                                alt="store_jonggak"></a>
+                        <div class="caption">
+                            <p class="store_tit">종각</p>
+                            <p class="store_address">매장주소<span class="sub_address">서울 종로구 종로 33 그랑서울 1층</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="img_one"><a href="#" title=""><img src="./img/store_starfield01.jpg"
+                                alt="store_starfield"></a>
+                        <div class="caption">
+                            <p class="store_tit">고양 스타필드</p>
+                            <p class="store_address">매장주소<span class="sub_address">경기도 고양시 덕양구 고양대로 1955</span></p>
+                            <p class="tel">TEL</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="store_right_wrap">
+                <ul>
+                    <li><a href="#" title="">청담점</a></li>
+                    <li><a href="#" title="">동대문 두타</a></li>
+                    <li><a href="#" title="">강남점</a></li>
+                    <li><a href="#" title="">인천공항</a></li>
+                    <li><a href="#" title="">종각점</a></li>
+                    <li><a href="#" title="">고양 스타필드</a></li>
+
+
+                </ul>
+                <p class="more_store"><a href="#" title="더 많은매장 둘러보기">더 많은 매장 둘러보기</a></p>
+            </div>
+        </article>
+
+
+        <article class="sns">
+            <h2>shakeshack SNS</h2>
+            <ul>
+                <li><a href="#" title=""><img src="./img/sns_facebook.png" alt="페이스북"></a>
+                    <p>쉐이크쉑에 대한
+                        가장 빠른 소식을 만나보세요</p>
+                </li>
+                <li><a href="#" title=""><img src="./img/sns_insta.png" alt="인스타그램"></a>
+                    <p>Like it! 일상의 좋아요를
+                        쉐이크쉑에 눌러주세요</p>
+                </li>
+                <li><a href="#" title=""><img src="./img/sns_youtube.png" alt="유튜브"></a>
+                    <p>잊지 못할 쉑-타임을
+                        영상으로 만나보세요!</p>
+                </li>
+                <li><a href="#" title=""><img src="./img/sns_naver.png" alt="네이버"></a>
+                    <p>좀 더 깊-이
+                        쉐이크쉑을 알고싶다면?</p>
+                </li>
             </ul>
         </article>
     </section>
 
 
-    <footer></footer>
+
+    <footer>
+        <div class="footer_wrap">
+            <dl class="f_left">for you</dl>
+            <dt>
+            <dd>고객센터</dd>
+            <dd>윤리신고센터</dd>
+            <dd>SPC 홈페이지</dd>
+            </dt>
+
+            <dl class="f_center">shake shack</dl>
+            <dt>
+            <dd></dd>
+            <dd></dd>
+            <dd></dd>
+            </dt>
+
+            <dl class="f_right">social</dl>
+            <dt>
+            <dd></dd>
+            <dd></dd>
+            <dd></dd>
+            </dt>
+        </div>
+
+    </footer>
 
     <!--아이콘폰트 삽입-->
-    <script src=" https://kit.fontawesome.com/a076d05399.js"> </script> <!--제이쿼리 라이브러리 삽입-->
-                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src=" https://kit.fontawesome.com/a076d05399.js"> </script>
 
-                    <script>
-                        $(document).ready(function () {
+    <!--제이쿼리 라이브러리 삽입-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-                            // //부모의 높이를 자식요소 이미지의 높이에 자동으로 맞추기
-                            // $('.visual').height($('.visual img').height());
-
-                            // //브라우저 크기를 조절할 때 마찬가지로 부모의 높이를 자식 요소의 높이와 동일하게 자동 맞추기, 반응형 할 때 많이 쓰임.
-                            $(window).resize(function () {
-                                $('.visual').height($('.visual img').height());
-                            });
-
-                            let num = 0; //초깃값 == 처음 이미지가 보이는 값
-
-                            //움직이는 함수
-                            function fadeInOut() {
-                                //3초 뒤에 보이는 이미지가 숨겨져야 함.
-                                $('.visual img').fadeOut(); //맨위 이미지부터 숨겨짐
-
-
-                                if (num == 2) { //마지막 이미지가 보일 때
-                                    num = 0; //처음이미지가 나오도록 함.
-                                } else {
-                                    num++; //다음 이미지가 나오도록 함.
-                                }
-                                $('.visual img').eq(num).fadeIn();
-                                $('.c_btn li:first-child').html(num + 1 + '/' + imgNum
-                                .length); // 1/3            
-                            };
-
-
-                            //3초마다 fadeInOut함수를 호출하여 이미지가 자동으로 플레이 되도록한다.
-                            let Timer = setInterval(fadeInOut, 3000);
-
-
-                            //현재 이미지 번호 표시하기
-                            let imgNum = $('.visual img');
-                            console.log(imgNum.length);
-
-                            $('.c_btn li:first-child').html(num + 1 + '/' + imgNum.length); // 1/3
-
-
-                            //일시정지를 클릭하면 시간을 제거하여 멈추게 하고 아이콘 모양을 play로 변경한다. 
-                            //play버튼을 클릭하면 'pause'로 변경하고 다시 자동으로 움직이게 된다.
-
-                            $('.c_btn li i').click(function () {
-                                if ($(this).hasClass('fas fa-play')) {
-                                    //클래스 명의 존재여부를 확인하여
-                                    //있으면 애니메이션을 실행
-                                    Timer = setInterval(fadeInOut, 3000);
-                                    $(this).attr('class', 'fas fa-pause'); //속성값을 변경하여 아이콘 모양을 바꾼다.
-                                } else {
-                                    $(this).attr('class', 'fas fa-play'); //속성값에 play를 넣어주고
-                                    clearInterval(Timer); //시간을 제거하여 멈추게 한다.
-                                }
-                            });
-
-
-
-
-                        });
-                    </script>
+    <script src="./js/fade_in_out.js"></script>
 </body>
 
 </html>
