--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!--    ms사의 익스프롤러 브라우저 호환성을 위함    -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -13,18 +13,18 @@
     <link href="./css/base.css" rel="stylesheet" type="text/css">
 
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.ico">
 
-    
+
     <title>쉑쉑버거 홈페이지 리뉴얼</title>
 </head>
 
 <body>
     <header>
         <div class="header_wrap">
-            <h1 class="logo_font"><a href="index.html" title="메인페이지로바로가기"><img src="./img/t_logo_font.png"
-                        alt="메인 로고"></a></h1>
+            <h1 class="logo_font"><a href="index.html" title="메인페이지로바로가기"><img src="./img/t_logo.png" alt="메인 로고"></a>
+            </h1>
             <nav>
-                <h1><a href="index.html" title="메인페이지로바로가기"><img src="./img/t_logo_pic.png" alt="메인 로고"></a></h1>
                 <ul class="gnb">
                     <li><a href="#" title="delivery">delivery</a></li>
                     <li><a href="#" title="food & drink">food & drink</a></li>
@@ -114,7 +114,7 @@
                     <div class="img_one"><a href="#" title=""><img src="./img/store_cheongdam01.jpg"
                                 alt="store_cheongdam"></a>
                         <div class="caption">
-                            <p class="store_tit">청담<span></span></p>
+                            <p class="store_tit">청담</p>
                             <p class="store_address">매장주소<span class="sub_address">서울시 강남구 도산대로 327
                                     SGF청담타워 1층</span></p>
                             <p class="tel">TEL</p>
@@ -227,31 +227,31 @@
         <article class="gallery">
             <h2>shakeshack</h2>
             <img src="./img/pic_01.png" alt="pic01" class="pic01">
-        <div class="pic01_sub">
-            <p>뉴욕에서 온 파인 캐쥬얼 레스토랑, 쉐이크쉑</p>
-            <p>쉐이크쉑은 2001년, 뉴욕 메디슨 스퀘어 공원 복구 사업을 위한 USHG*의 핫도그 카트에서 시작되었습니다.
-                공원 내 "I ♥ TAXI" 아트워크로 꾸며진 핫도그 카트는 매해 여름, 쉑팬들이 길게 줄 섰을 정도로 인기를 끌었습니다.
-                 2004년, 많은 인기에 힘입어 메디슨 스퀘어 공원에 ‘SHAKE SHACK’ 
-                 이라는 간판을 걸고 시작한 것이 전 세계가 사랑하는 브랜드, 쉐이크쉑이 되었습니다.</p>
-                 <p>USHG(유니언 스퀘어 호스피탈리티 그룹)*<br>
+            <div class="pic01_sub">
+                <p>뉴욕에서 온 파인 캐쥬얼 레스토랑, 쉐이크쉑</p>
+                <p>쉐이크쉑은 2001년, 뉴욕 메디슨 스퀘어 공원 복구 사업을 위한 USHG*의 핫도그 카트에서 시작되었습니다.
+                    공원 내 "I ♥ TAXI" 아트워크로 꾸며진 핫도그 카트는 매해 여름, 쉑팬들이 길게 줄 섰을 정도로 인기를 끌었습니다.
+                    2004년, 많은 인기에 힘입어 메디슨 스퀘어 공원에 ‘SHAKE SHACK’
+                    이라는 간판을 걸고 시작한 것이 전 세계가 사랑하는 브랜드, 쉐이크쉑이 되었습니다.</p>
+                <p>USHG(유니언 스퀘어 호스피탈리티 그룹)*<br>
                     미국 유니언스퀘어카페와 미슐랭 가이드 1스타인 그래머시태번, 더 모던 등<br>
                     10여 개의 외식업체를 운영하는 글로벌 외식 기업</p>
-        </div>
-<div id="box01">
-        <div id="img_box01">
-            <img src="./img/sub_visual01.jpg" alt="sub_visual01">
-            <img src="./img/sub_visual02.jpg" alt="sub_visual01">
-            <img src="./img/sub_visual03.jpg" alt="sub_visual02">
-            <img src="./img/sub_visual04.jpg" alt="sub_visual03">
-        </div>
+            </div>
+            <div id="box01">
+                <div id="img_box01">
+                    <img src="./img/sub_visual01.jpg" alt="sub_visual01">
+                    <img src="./img/sub_visual02.jpg" alt="sub_visual01">
+                    <img src="./img/sub_visual03.jpg" alt="sub_visual02">
+                    <img src="./img/sub_visual04.jpg" alt="sub_visual03">
+                </div>
 
-        <ul class="c_btn01">
-            <li class="on01"></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
+                <ul class="c_btn01">
+                    <li class="on01"></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </article>
     </section>
 
@@ -259,27 +259,40 @@
 
     <footer>
         <div class="footer_wrap">
-            <dl class="f_left">for you</dl>
-            <dt>
-            <dd>고객센터</dd>
-            <dd>윤리신고센터</dd>
-            <dd>SPC 홈페이지</dd>
-            </dt>
+            <h1><img src="./img/f_logo_white.png" alt="푸터로고"></h1>
 
-            <dl class="f_center">shake shack</dl>
-            <dt>
-            <dd></dd>
-            <dd></dd>
-            <dd></dd>
-            </dt>
+            <div class="dl_wrap">
+                <dl class="f_left">
+                    <dt>for you</dt>
+                    <dd>고객센터</dd>
+                    <dd>윤리신고센터</dd>
+                    <dd>SPC 홈페이지</dd>
+                </dl>
 
-            <dl class="f_right">social</dl>
-            <dt>
-            <dd></dd>
-            <dd></dd>
-            <dd></dd>
-            </dt>
+                <dl class="f_center">
+                    <dt>shake shack</dt>
+                    <dd>채용안내</dd>
+                    <dd>매장안내</dd>
+                </dl>
+
+                <dl class="f_right">
+                    <dt>social</dt>
+                    <dd>인스타그램</dd>
+                    <dd>네이버 포스트</dd>
+                    <dd>유튜브</dd>
+                    <dd>페이스북</dd>
+                </dl>
+            </div>
+
+            <p>2004-2016 SHAKE SHACK. ALL RIGHTS RESERVED.<br><br>
+
+                SOME INFORMATION ON THIS SITE MAY VARY SLIGHTLY BY
+                LOCATION AND IN STADIUMS,
+                EVENT VENUES AND INTERNATIONAL SHACKS.</p>
+
         </div>
+
+
 
     </footer>
 
