--- a/mindex.html
+++ b/mindex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>쉑쉑버거 모바일 리뉴얼</title>
 
     <!--    css초기화    -->
     <link href="css/reset.css" rel="stylesheet" type="text/css">
@@ -26,47 +26,48 @@
     <input type="checkbox" id="btn_toggle">
     <input type="checkbox" id="btn_location">
     <header>
-        <h1><a href="mindex.html" alt="메인페이지로 바로가기"><img src="./img/t_logo.png" alt="메인로고"></a></h1>
-        <label for="btn_toggle">
-            <img src="./img/m_toggle.png" alt="토글버튼" id="toggle">
-        </label>
-        <label for="btn_location">
-            <img src="./img/m_location.png" alt="위치" id="location">
-        </label>
+        <div class="header_wrap">
+            <h1><a href="mindex.html" title="메인페이지로 바로가기"><img src="./img/t_logo.png" alt="메인로고"></a></h1>
+            <label for="btn_toggle">
+                <img src="./img/m_toggle.png" alt="토글버튼" id="toggle">
+            </label>
+            <label for="btn_location">
+                <img src="./img/m_location.png" alt="위치" id="location">
+            </label>
 
-        <nav id="nav_toggle">
-            <label for="btn_toggle"><img src="./img/m_close.png" alt="닫기버튼"></label>
-            
-            <ul>
-                <li><img src="./img/f_logo.png" alt="로고"></li>
-                <li><a href="#" title="">food & drink</a></li>
-                <li><a href="#" title="">brand story</a></li>
-                <li><a href="#" title="">delivery</a></li>
-                <li><a href="#" title="">location</a></li>
-            </ul>
-        </nav>
+            <nav id="nav_toggle">
+                <label for="btn_toggle"><img src="./img/m_close.png" alt="닫기버튼"></label>
 
-        <nav id="nav_location">
-            <label for="btn_location"><img src="./img/m_close.png" alt="닫기버튼"></label>
-            <ul>
-                <li><a href="#" title="">강남</a></li>
-                <li><a href="#" title="">청담</a></li>
-                <li><a href="#" title="">두타</a></li>
-                <li><a href="#" title="">분당</a></li>
-                <li><a href="#" title="">고양</a></li>
-                <li><a href="#" title="">인천공항</a></li>
-                <li><a href="#" title="">센트러시티</a></li>
-                <li><a href="#" title="">송도</a></li>
-                <li><a href="#" title="">서면</a></li>
-                <li><a href="#" title="">종각</a></li>
-                <li><a href="#" title="">영등포</a></li>
-                <li><a href="#" title="">용산</a></li>
-                <li><a href="#" title="">대구</a></li>
-                <li><a href="#" title="">대전</a></li>
+                <ul>
+                    <li><img src="./img/f_logo.png" alt="로고"></li>
+                    <li><a href="#" title="">food & drink</a></li>
+                    <li><a href="#" title="">brand story</a></li>
+                    <li><a href="#" title="">delivery</a></li>
+                    <li><a href="#" title="">location</a></li>
+                </ul>
+            </nav>
 
-            </ul>
-        </nav>
+            <nav id="nav_location">
+                <label for="btn_location"><img src="./img/m_close.png" alt="닫기버튼"></label>
+                <ul>
+                    <li><a href="#" title="">강남</a></li>
+                    <li><a href="#" title="">청담</a></li>
+                    <li><a href="#" title="">두타</a></li>
+                    <li><a href="#" title="">분당</a></li>
+                    <li><a href="#" title="">고양</a></li>
+                    <li><a href="#" title="">인천공항</a></li>
+                    <li><a href="#" title="">센트럴시티</a></li>
+                    <li><a href="#" title="">송도</a></li>
+                    <li><a href="#" title="">서면</a></li>
+                    <li><a href="#" title="">종각</a></li>
+                    <li><a href="#" title="">영등포</a></li>
+                    <li><a href="#" title="">용산</a></li>
+                    <li><a href="#" title="">대구</a></li>
+                    <li><a href="#" title="">대전</a></li>
 
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section>
@@ -137,32 +138,50 @@
 
         <article class=banner01>
             <h2>Stand For Something Good</h2>
-            <p>세상에 필요한 사려 깊은 가치</p>
-            <p>쉐이크쉑은 신선하고 좋은 재료의 음식과 즐겁고 활기 넘치는
+            <p id="banner01_title">세상에 필요한<br> 사려 깊은 가치</p>
+            <p id="banner01_text">쉐이크쉑은 신선하고 좋은 재료의 음식과 즐겁고 활기 넘치는
                 지역사회의 모임 공간, 그리고 게스트를 향한 따뜻한 호스피탈리티를 통해
                 우리의 핵심 가치인 “Stand For Something Good”을 실천합니다.</p>
         </article>
 
         <article class="store">
             <h2>location</h2>
+            <div class="img_wrap">
+                <img src="./img/store_cheongdam01.jpg" alt="청담">
+                <img src="./img/store_gangnam01.jpg" alt="강남">
+                <img src="./img/store_doota01.jpg" alt="두타">
+                <img src="./img/store_incheon01.jpg" alt="인천공항">
+                <img src="./img/store_jonggak01.jpg" alt="종각">
+                <img src="./img/store_starfield01.jpg" alt="스타필드">
+            </div>
+
+            <p>청담점</p>
+            <p>강남점</p>
+            <p>동대문 두타</p>
+            <p>인천공항점</p>
+            <p>종각점</p>
+            <p>고양 스타필드</p>
+            <p class="store_btn">매장 더보기</p>
+
 
         </article>
 
         <article class="sns">
             <h2>shakeshack SNS</h2>
-            <figure>
-                <img src="./img/sns_insta.png" alt="인스타그램">
-                <figcaption>instagram</figcaption>
-            </figure>
-            <figure>
-                <img src="./img/sns_facebook.png" alt="페이스북">
-                <figcaption>facebook</figcaption>
-            </figure>
-            <figure>
-                <img src="./img/sns_youtube.png" alt="유튜브">
-                <figcaption>youtube</figcaption>
-
-            </figure>
+            <div class="figure_wrap">
+                <figure>
+                    <img src="./img/sns_insta.png" alt="인스타그램">
+                    <figcaption>instagram</figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/sns_facebook.png" alt="페이스북">
+                    <figcaption>facebook</figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/sns_youtube.png" alt="유튜브">
+                    <figcaption>youtube</figcaption>
+                </figure>
+            </div>
 
         </article>
 
@@ -189,7 +208,19 @@
             <dd>유튜브</dd>
             <dd>페이스북</dd>
         </dl>
-        <img src="./img/f_logo_white.png" alt="푸터로고">
+        <div class="footer_wrap">
+        <p>2004-2016 SHAKE SHACK. ALL RIGHTS RESERVED.<br><br>
+
+            SOME INFORMATION ON THIS SITE MAY VARY SLIGHTLY BY
+            LOCATION AND IN STADIUMS,
+            EVENT VENUES AND INTERNATIONAL SHACKS.</p>
+        <ul>
+            <li><a href="#" title="">이용약관</a></li>
+            <li><a href="#" title="">pc버전</a></li>
+            <li><a href="#" title="">pc버전</a></li>
+        </ul>
+    </div>
+        <h1><img src="./img/f_logo_white.png" alt="푸터로고"></h1>
     </footer>
 
 
@@ -198,67 +229,8 @@
 
     <!--제이쿼리 라이브러리 삽입-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
+    <script src="./js/fade_in_out_mobile.js"></script>
 
-            // //부모의 높이를 자식요소 이미지의 높이에 자동으로 맞추기
-            // $('.visual').height($('.visual img').height());
-
-            // //브라우저 크기를 조절할 때 마찬가지로 부모의 높이를 자식 요소의 높이와 동일하게 자동 맞추기, 반응형 할 때 많이 쓰임.
-            $(window).resize(function () {
-                $('.visual').height($('.visual img').height());
-            });
-
-            let num = 0; //초깃값 == 처음 이미지가 보이는 값
-
-            //움직이는 함수
-            function fadeInOut() {
-                //3초 뒤에 보이는 이미지가 숨겨져야 함.
-                $('.visual img').fadeOut(); //맨위 이미지부터 숨겨짐
-
-
-                if (num == 3) { //마지막 이미지가 보일 때
-                    num = 0; //처음이미지가 나오도록 함.
-                } else {
-                    num++; //다음 이미지가 나오도록 함.
-                }
-                $('.visual img').eq(num).fadeIn();
-                $('.c_btn li:first-child').html(num + 1 + '/' + imgNum
-                    .length); // 1/3            
-            };
-
-
-            //3초마다 fadeInOut함수를 호출하여 이미지가 자동으로 플레이 되도록한다.
-            let Timer = setInterval(fadeInOut, 3000);
-
-
-            //현재 이미지 번호 표시하기
-            let imgNum = $('.visual img');
-            console.log(imgNum.length);
-
-            $('.c_btn li:first-child').html(num + 1 + '/' + imgNum.length); // 1/3
-
-
-            //일시정지를 클릭하면 시간을 제거하여 멈추게 하고 아이콘 모양을 play로 변경한다. 
-            //play버튼을 클릭하면 'pause'로 변경하고 다시 자동으로 움직이게 된다.
-
-            $('.c_btn li i').click(function () {
-                if ($(this).hasClass('fas fa-play')) {
-                    //클래스 명의 존재여부를 확인하여
-                    //있으면 애니메이션을 실행
-                    Timer = setInterval(fadeInOut, 3000);
-                    $(this).attr('class', 'fas fa-pause'); //속성값을 변경하여 아이콘 모양을 바꾼다.
-                } else {
-                    $(this).attr('class', 'fas fa-play'); //속성값에 play를 넣어주고
-                    clearInterval(Timer); //시간을 제거하여 멈추게 한다.
-                }
-            });
-
-
-            return false;
-
-        });
-    </script>
 </body>
 
 </html>
