update[fix] :mobile
footer영역 수정

--- a/mindex.html
+++ b/mindex.html
@@ -216,8 +216,8 @@
             EVENT VENUES AND INTERNATIONAL SHACKS.</p>
         <ul>
             <li><a href="#" title="">이용약관</a></li>
-            <li><a href="#" title="">pc버전</a></li>
-            <li><a href="#" title="">pc버전</a></li>
+            <li><a href="https://sohyeon403.github.io/shakeshack/" title="">pc버전</a></li>
+            <li><a href="#" title="">site map</a></li>
         </ul>
     </div>
         <h1><img src="./img/f_logo_white.png" alt="푸터로고"></h1>
